// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render toast card with no type and with only title 1`] = `
.c2 {
  box-sizing: border-box;
  flex-grow: 1;
}

.c1 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c3 {
  box-sizing: border-box;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-subtitle-fontSize);
  line-height: var(--pbl-theme-typography-subtitle-lineHeight);
  margin-bottom: 0;
  flex-grow: 1;
}

.c0 {
  box-sizing: border-box;
  border-radius: 6px;
  max-width: 400px;
  background-color: var(--pbl-theme-colors-gray-800);
  color: var(--pbl-theme-colors-common-blackContrastText);
  padding: 12px 24px 12px 12px;
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
}

<div
  aria-aria-describedby=":r0:-title"
  aria-aria-labelledby=":r0:-title"
  class="c0"
  data-testid="pbl-toastcard"
  id=":r0:"
>
  <div
    alignitems="center"
    class="c1"
  >
    <div
      class="c2"
      flexgrow="1"
    >
      <div
        class="c3"
      >
        <h4
          class="c4"
          customstyles="[object Object]"
          data-testid="pbl-toastcard-title"
          flexgrow="1"
          id=":r0:-title"
        >
          Hi
        </h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`type error Render toast card with custom icon 1`] = `
.c0 {
  box-sizing: border-box;
  fill: var(--pbl-theme-colors-negative-main);
  margin-right: 12px;
}

.c0>* {
  display: block;
}

<div
  class="c0"
  css="
  & > * {
    display: block;
  }
,,"
  data-testid="pbl-toastcard-iconbox"
  fillcolor="negative.main"
  mr="5"
>
  <div>
    hello
  </div>
</div>
`;

exports[`type error Render toast card with only title 1`] = `
.c2 {
  box-sizing: border-box;
  fill: var(--pbl-theme-colors-negative-main);
  margin-right: 12px;
}

.c2>* {
  display: block;
}

.c3 {
  box-sizing: border-box;
  flex-grow: 1;
}

.c1 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c4 {
  box-sizing: border-box;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-subtitle-fontSize);
  line-height: var(--pbl-theme-typography-subtitle-lineHeight);
  margin-bottom: 0;
  flex-grow: 1;
}

.c0 {
  box-sizing: border-box;
  border-radius: 6px;
  max-width: 400px;
  background-color: var(--pbl-theme-colors-gray-800);
  color: var(--pbl-theme-colors-common-blackContrastText);
  padding: 12px 24px 12px 12px;
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
}

<div
  aria-aria-describedby=":rb:-title"
  aria-aria-labelledby=":rb:-title"
  class="c0"
  data-testid="pbl-toastcard"
  id=":rb:"
>
  <div
    alignitems="center"
    class="c1"
  >
    <div
      class="c2"
      css="
  & > * {
    display: block;
  }
,,"
      data-testid="pbl-toastcard-iconbox"
      fillcolor="negative.main"
      mr="5"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm-1-5h2v2h-2v-2zm0-8h2v6h-2V7z"
        />
      </svg>
    </div>
    <div
      class="c3"
      flexgrow="1"
    >
      <div
        class="c4"
      >
        <h4
          class="c5"
          customstyles="[object Object]"
          data-testid="pbl-toastcard-title"
          flexgrow="1"
          id=":rb:-title"
        >
          Hi
        </h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`type info Render toast card with custom icon 1`] = `
.c0 {
  box-sizing: border-box;
  fill: var(--pbl-theme-colors-common-white);
  margin-right: 12px;
}

.c0>* {
  display: block;
}

<div
  class="c0"
  css="
  & > * {
    display: block;
  }
,,"
  data-testid="pbl-toastcard-iconbox"
  fillcolor="common.white"
  mr="5"
>
  <div>
    hello
  </div>
</div>
`;

exports[`type info Render toast card with only title 1`] = `
.c2 {
  box-sizing: border-box;
  fill: var(--pbl-theme-colors-common-white);
  margin-right: 12px;
}

.c2>* {
  display: block;
}

.c3 {
  box-sizing: border-box;
  flex-grow: 1;
}

.c1 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c4 {
  box-sizing: border-box;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-subtitle-fontSize);
  line-height: var(--pbl-theme-typography-subtitle-lineHeight);
  margin-bottom: 0;
  flex-grow: 1;
}

.c0 {
  box-sizing: border-box;
  border-radius: 6px;
  max-width: 400px;
  background-color: var(--pbl-theme-colors-gray-800);
  color: var(--pbl-theme-colors-common-blackContrastText);
  padding: 12px 24px 12px 12px;
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
}

<div
  aria-aria-describedby=":r5:-title"
  aria-aria-labelledby=":r5:-title"
  class="c0"
  data-testid="pbl-toastcard"
  id=":r5:"
>
  <div
    alignitems="center"
    class="c1"
  >
    <div
      class="c2"
      css="
  & > * {
    display: block;
  }
,,"
      data-testid="pbl-toastcard-iconbox"
      fillcolor="common.white"
      mr="5"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zM11 7h2v2h-2V7zm0 4h2v6h-2v-6z"
        />
      </svg>
    </div>
    <div
      class="c3"
      flexgrow="1"
    >
      <div
        class="c4"
      >
        <h4
          class="c5"
          customstyles="[object Object]"
          data-testid="pbl-toastcard-title"
          flexgrow="1"
          id=":r5:-title"
        >
          Hi
        </h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`type success Render toast card with custom icon 1`] = `
.c0 {
  box-sizing: border-box;
  fill: var(--pbl-theme-colors-positive-main);
  margin-right: 12px;
}

.c0>* {
  display: block;
}

<div
  class="c0"
  css="
  & > * {
    display: block;
  }
,,"
  data-testid="pbl-toastcard-iconbox"
  fillcolor="positive.main"
  mr="5"
>
  <div>
    hello
  </div>
</div>
`;

exports[`type success Render toast card with only title 1`] = `
.c2 {
  box-sizing: border-box;
  fill: var(--pbl-theme-colors-positive-main);
  margin-right: 12px;
}

.c2>* {
  display: block;
}

.c3 {
  box-sizing: border-box;
  flex-grow: 1;
}

.c1 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c4 {
  box-sizing: border-box;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-subtitle-fontSize);
  line-height: var(--pbl-theme-typography-subtitle-lineHeight);
  margin-bottom: 0;
  flex-grow: 1;
}

.c0 {
  box-sizing: border-box;
  border-radius: 6px;
  max-width: 400px;
  background-color: var(--pbl-theme-colors-gray-800);
  color: var(--pbl-theme-colors-common-blackContrastText);
  padding: 12px 24px 12px 12px;
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
}

<div
  aria-aria-describedby=":r7:-title"
  aria-aria-labelledby=":r7:-title"
  class="c0"
  data-testid="pbl-toastcard"
  id=":r7:"
>
  <div
    alignitems="center"
    class="c1"
  >
    <div
      class="c2"
      css="
  & > * {
    display: block;
  }
,,"
      data-testid="pbl-toastcard-iconbox"
      fillcolor="positive.main"
      mr="5"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm-.997-4L6.76 11.757l1.414-1.414 2.829 2.829 5.656-5.657 1.415 1.414L11.003 16z"
        />
      </svg>
    </div>
    <div
      class="c3"
      flexgrow="1"
    >
      <div
        class="c4"
      >
        <h4
          class="c5"
          customstyles="[object Object]"
          data-testid="pbl-toastcard-title"
          flexgrow="1"
          id=":r7:-title"
        >
          Hi
        </h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`type undefined Render toast card with custom icon 1`] = `
.c0 {
  box-sizing: border-box;
  fill: var(--pbl-theme-colors-common-white);
  margin-right: 12px;
}

.c0>* {
  display: block;
}

<div
  class="c0"
  css="
  & > * {
    display: block;
  }
,,"
  data-testid="pbl-toastcard-iconbox"
  fillcolor="common.white"
  mr="5"
>
  <div>
    hello
  </div>
</div>
`;

exports[`type undefined Render toast card with only title 1`] = `
.c2 {
  box-sizing: border-box;
  fill: var(--pbl-theme-colors-common-white);
  margin-right: 12px;
}

.c2>* {
  display: block;
}

.c3 {
  box-sizing: border-box;
  flex-grow: 1;
}

.c1 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c4 {
  box-sizing: border-box;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-subtitle-fontSize);
  line-height: var(--pbl-theme-typography-subtitle-lineHeight);
  margin-bottom: 0;
  flex-grow: 1;
}

.c0 {
  box-sizing: border-box;
  border-radius: 6px;
  max-width: 400px;
  background-color: var(--pbl-theme-colors-gray-800);
  color: var(--pbl-theme-colors-common-blackContrastText);
  padding: 12px 24px 12px 12px;
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
}

<div
  aria-aria-describedby=":r3:-title"
  aria-aria-labelledby=":r3:-title"
  class="c0"
  data-testid="pbl-toastcard"
  id=":r3:"
>
  <div
    alignitems="center"
    class="c1"
  >
    <div
      class="c2"
      css="
  & > * {
    display: block;
  }
,,"
      data-testid="pbl-toastcard-iconbox"
      fillcolor="common.white"
      mr="5"
    >
      <div>
        hi
      </div>
    </div>
    <div
      class="c3"
      flexgrow="1"
    >
      <div
        class="c4"
      >
        <h4
          class="c5"
          customstyles="[object Object]"
          data-testid="pbl-toastcard-title"
          flexgrow="1"
          id=":r3:-title"
        >
          Hi
        </h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`type unknown Render toast card with custom icon 1`] = `
.c0 {
  box-sizing: border-box;
  fill: var(--pbl-theme-colors-common-white);
  margin-right: 12px;
}

.c0>* {
  display: block;
}

<div
  class="c0"
  css="
  & > * {
    display: block;
  }
,,"
  data-testid="pbl-toastcard-iconbox"
  fillcolor="common.white"
  mr="5"
>
  <div>
    hello
  </div>
</div>
`;

exports[`type unknown Render toast card with only title 1`] = `
.c2 {
  box-sizing: border-box;
  fill: var(--pbl-theme-colors-common-white);
  margin-right: 12px;
}

.c2>* {
  display: block;
}

.c3 {
  box-sizing: border-box;
  flex-grow: 1;
}

.c1 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c4 {
  box-sizing: border-box;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-subtitle-fontSize);
  line-height: var(--pbl-theme-typography-subtitle-lineHeight);
  margin-bottom: 0;
  flex-grow: 1;
}

.c0 {
  box-sizing: border-box;
  border-radius: 6px;
  max-width: 400px;
  background-color: var(--pbl-theme-colors-gray-800);
  color: var(--pbl-theme-colors-common-blackContrastText);
  padding: 12px 24px 12px 12px;
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
}

<div
  aria-aria-describedby=":rd:-title"
  aria-aria-labelledby=":rd:-title"
  class="c0"
  data-testid="pbl-toastcard"
  id=":rd:"
>
  <div
    alignitems="center"
    class="c1"
  >
    <div
      class="c2"
      css="
  & > * {
    display: block;
  }
,,"
      data-testid="pbl-toastcard-iconbox"
      fillcolor="common.white"
      mr="5"
    >
      <div>
        hi
      </div>
    </div>
    <div
      class="c3"
      flexgrow="1"
    >
      <div
        class="c4"
      >
        <h4
          class="c5"
          customstyles="[object Object]"
          data-testid="pbl-toastcard-title"
          flexgrow="1"
          id=":rd:-title"
        >
          Hi
        </h4>
      </div>
    </div>
  </div>
</div>
`;

exports[`type warning Render toast card with custom icon 1`] = `
.c0 {
  box-sizing: border-box;
  fill: var(--pbl-theme-colors-neutral-main);
  margin-right: 12px;
}

.c0>* {
  display: block;
}

<div
  class="c0"
  css="
  & > * {
    display: block;
  }
,,"
  data-testid="pbl-toastcard-iconbox"
  fillcolor="neutral.main"
  mr="5"
>
  <div>
    hello
  </div>
</div>
`;

exports[`type warning Render toast card with only title 1`] = `
.c2 {
  box-sizing: border-box;
  fill: var(--pbl-theme-colors-neutral-main);
  margin-right: 12px;
}

.c2>* {
  display: block;
}

.c3 {
  box-sizing: border-box;
  flex-grow: 1;
}

.c1 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c4 {
  box-sizing: border-box;
  display: flex;
}

.c5 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-subtitle-fontSize);
  line-height: var(--pbl-theme-typography-subtitle-lineHeight);
  margin-bottom: 0;
  flex-grow: 1;
}

.c0 {
  box-sizing: border-box;
  border-radius: 6px;
  max-width: 400px;
  background-color: var(--pbl-theme-colors-gray-800);
  color: var(--pbl-theme-colors-common-blackContrastText);
  padding: 12px 24px 12px 12px;
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
}

<div
  aria-aria-describedby=":r9:-title"
  aria-aria-labelledby=":r9:-title"
  class="c0"
  data-testid="pbl-toastcard"
  id=":r9:"
>
  <div
    alignitems="center"
    class="c1"
  >
    <div
      class="c2"
      css="
  & > * {
    display: block;
  }
,,"
      data-testid="pbl-toastcard-iconbox"
      fillcolor="neutral.main"
      mr="5"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12.866 3l9.526 16.5a1 1 0 0 1-.866 1.5H2.474a1 1 0 0 1-.866-1.5L11.134 3a1 1 0 0 1 1.732 0zm-8.66 16h15.588L12 5.5 4.206 19zM11 16h2v2h-2v-2zm0-7h2v5h-2V9z"
        />
      </svg>
    </div>
    <div
      class="c3"
      flexgrow="1"
    >
      <div
        class="c4"
      >
        <h4
          class="c5"
          customstyles="[object Object]"
          data-testid="pbl-toastcard-title"
          flexgrow="1"
          id=":r9:-title"
        >
          Hi
        </h4>
      </div>
    </div>
  </div>
</div>
`;
